--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
     "viem": "^2.33.2",
